--- a/public/css/scss/pages/_not_found.scss
+++ b/public/css/scss/pages/_not_found.scss
@@ -1,9 +1,8 @@
 /* =================== Forms Elements Styles =================== */
 
 main.not-found {
-  height: 100%;
   width: 80%;
-  margin: 0 auto;
+  margin: 100px auto;
   display: flex;
   justify-content: center;
   align-items: center;
